Finish implementing /vibe_check endpoint
